[package]
name = "gatherer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
num-traits = "0.2"
lazy_static = "1.4"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
